fix: bottom header spacing

--- a/packages/blade-core/src/styles/BottomSheet/bottomSheet.module.css
+++ b/packages/blade-core/src/styles/BottomSheet/bottomSheet.module.css
@@ -206,7 +206,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: var(--spacing-2);
+  gap: var(--spacing-3);
 }
 
 .headerTitle {
@@ -273,6 +273,7 @@
   align-items: center;
   justify-content: center;
   height: 28px;
+  margin-left: var(--spacing-3);
   padding: 0;
   border: none;
   background: transparent;
